--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -17,6 +17,6 @@ jobs:
         with:
           java-version: 1.8
       - name: Build with Maven
-        run: mvn -B package --file ./portfolio/pom.xml
+        run: mvn -B package --file ./where-to-travel/pom.xml
       - name: Run java checkstyle
         uses: nikitasavinov/checkstyle-action@0.2.0
