--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -1,4 +1,3 @@
-
 name: JS style
 
 on:
@@ -14,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: initialization npm
       run: npm init -y
-    - name: Install ESlint
-      run: npm install --save-dev eslint eslint-config-google
-    - name: Run ESlint
-      run: ./node_modules/.bin/eslint ./where-to-travel/src/main/webapp --ext .js
+    - name: Install standard
+      run: npm install standard --save-dev
+    - name: Run standard
+      run: npx standard
